Fixed handle not showing up issue.  Per Eric's suggestion, set width and height to 24px.

--- a/profiles/westminster/themes/contrib/yorkshire/css/style.css
+++ b/profiles/westminster/themes/contrib/yorkshire/css/style.css
@@ -33,3 +33,8 @@ body .label {
   color: #333;
   font-size: 80%;
 }
+
+a.tabledrag-handle .handle {
+  width: 24px;
+  height: 24px;
+}
